--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="notification_url">https://fcm.googleapis.com/fcm/send</string>
     <string name="server_key">AAAAVJ4sCLk:APA91bGdHwcZ_GK_ygRb10h-qEOHzElxrbhvelU5REpK0pAokNECe-B43ZHrRiMyPkTNd9LMC7ilKCZEWq2QXC6NyLRov90lncXUyFx5as2jaI_Brhg2J_Y7bHfInTwgTAiKlqzVmwlg</string>
 
+    <string name="message_deleted">This Message Was Deleted</string>
+    <string name="empty_chat">Empty Chat! \nSend Your First Message!</string>
 </resources>
